objects/vlocity_cmt__AdSpaceCreativeSizeType__c.object
<CustomObject>
    <description>The Ad Space Creative SizeType is the junction object to capture the possible SizeTypes that can be assigned to an Ad Space.</description>
    <fields>
        <fullName>vlocity_cmt__AdCreativeSizeTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Ad Creative SizeType record.</description>
        <label>Ad Creative SizeType</label>
        <referenceTo>vlocity_cmt__AdCreativeSizeType__c</referenceTo>
        <relationshipName>AdSpaceCreativeSizeTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdSpaceSpecificationId__c</fullName>
        <description>Reference to the AdSpace Specification record.</description>
        <label>Ad Space Specification</label>
        <referenceTo>vlocity_cmt__AdSpaceSpecification__c</referenceTo>
        <relationshipName>AdSpaceCreativeSizeTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CoreId__c</fullName>
        <description>Displays the ID of the core object created when migrating custom data.</description>
        <label>Core Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Ad Space Creative SizeType</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Space Creative Size Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>